[build-system]
requires = [
    "setuptools",
]

[project]
name = "zkg"
dynamic = ["version"]
description = "The Zeek Package Manager"
readme = "README"

requires-python = ">= 3.10"

keywords = [
    "zeek",
    "zeekctl",
    "zeekcontrol",
    "package",
    "manager",
    "scripts",
    "plugins",
    "security",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: University of Illinois/NCSA Open Source License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]

# NOTE: Keep `requirements.txt` in sync which we currently use e.g., for RTD.
dependencies = [
    "GitPython>=3.1.43",
    "semantic_version>=2.10.0",
    # Technically not a zkg dependency, but typically expected by users to be present.
    "btest>=1.1",
]

[project.optional-dependencies]
dev = [
    "Sphinx>=7.2.6",
    "sphinx_rtd_theme>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
]

[project.license]
file = "COPYING"

[project.urls]
Homepage = "https://docs.zeek.org/projects/package-manager"
Repository = "https://github.com/zeek/package-manager"

[[project.maintainers]]
name = "The Zeek Project"
email = "info@zeek.org"

[tool.setuptools]
packages = ["zeekpkg"]
script-files = ["zkg"]

[tool.distutils.bdist_wheel]
universal = true

[[tool.mypy.overrides]]
module = ["zeekpkg", "semantic_version"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["A", "B", "C4", "COM", "F", "I", "ISC", "N", "PL", "RUF", "RET", "UP"]
ignore = ["PLR0912", "PLR0915", "PLR0911", "PLR0913", "PLR2004", "PLW2901"]

[tool.pytest.ini_options]
# Tweak pytest behavior:
#
# - run tests in parallel (`-n auto`)
# - generate coverage summary (`--cov-report term`), and also automatically
#   emit a HTML report (`--cov-report html`)
# - suppress warnings when no coverage information could be collected
addopts = "-n auto --cov --cov-config=.coveragerc --cov-report term --cov-report html -W ignore::coverage.exceptions.CoverageWarning"
